tests/sksl/errors/SwitchDuplicateCase.glsl
### Compilation failed:

error: 5: duplicate case value '0'
        case 0:
             ^
1 error
